Contact Us header was overflowing leading to horizontal scrollbar.Fixed.

--- a/css/contact.css
+++ b/css/contact.css
@@ -71,7 +71,7 @@ orientation is landscape */
     bottom: 0;
     position: absolute;
     text-align: center;
-    width: 100%;
+    width: 95%;
   }
 
   .header-h1 {
@@ -214,7 +214,7 @@ hr {
 /* Applying style to the first name column to create spacing */
 .col-first-name {
   padding-left: 0 ! important;
-  padding-right: 0 ! important;
+  padding-right: 10px ! important;
 }
 
 /* Applying style to the first name column to remove spacing for screen sizes less than 992px */
